--- a/nodejs-assets/nodejs-project/package.json
+++ b/nodejs-assets/nodejs-project/package.json
@@ -9,10 +9,10 @@
   "author": "Synonym",
   "license": "MIT",
   "dependencies": {
-    "@noble/secp256k1": "^1.7.0",
-    "bip32": "git+ssh://git@github.com/synonymdev/bip32",
+    "bip32": "2.0.6",
     "bip39": "^3.0.4",
     "bitcoinjs-lib": "^6.0.1",
-    "create-hmac": "^1.1.7"
+    "create-hmac": "^1.1.7",
+    "tiny-secp256k1": "^2.2.1"
   }
 }
